praca warsztatowa ciag dalszy

--- a/index.html
+++ b/index.html
@@ -86,9 +86,102 @@
                 consectetur adipiscing elit. Proin tempus ut mi ac eleifend. Vivamus congue dolor non eros malesuada, vitae cursus augue vehicula. Duis ligula diam, egestas quis interdum quis, faucibus at dui.
             </p>
         </div>
-
     </container>
-
+    <chest>
+        <article class="chest_header">
+            CENNIK
+        </article>
+        <div class="chest_boxes">
+            <article class="chest_box" id="rest_box">
+                <div class="box_icon" id="box_art">
+                </div>
+                <div class="box-info">
+                    <div class="info_plan" id="plan_many">
+                        BASIC PLAN
+                    </div>
+                    <div class="info_price" id="price_light">
+                        <p class="price_height">
+                            <span class="price_up">8</span>5<span class="price_upper">99</span></p>
+                        <p class="price_time">
+                            PLN/MSC
+                        </p>
+                    </div>
+                    <div class="box_margin">
+                        <div class="info_paint">
+                            Zakup towaru + dowóz
+                        </div>
+                        <div class="info_express">
+                            Serwis
+                        </div>
+                    </div>
+                    <div class="box_join">
+                        DOŁĄCZ
+                    </div>
+            </article>
+            <article class="chest_box" id="add_box">
+                <div class="box_icon" id="box_symbol">
+                </div>
+                <div class="box-info">
+                    <div class="info_plan" id="plan_more">
+                        STANDARD PLAN
+                    </div>
+                    <div class="info_price" id="price_color">
+                        <p class="price_height">
+                            <span class="price_low">9</span>5<span class="price_upper">99</span></p>
+                        <p class="price_time">
+                            PLN/MSC
+                        </p>
+                    </div>
+                    <div class="box_margin">
+                        <div class="info_show" id="">
+                            Zakup towaru + dowóz
+                        </div>
+                        <div class="info_describe">
+                            Serwis
+                        </div>
+                        <div class="info_show">
+                            Gwarancja 5 lat
+                        </div>
+                    </div>
+                    <div class="box_observe">
+                        DOŁĄCZ
+                    </div>
+            </article>
+            <article class="chest_box" id="option_box">
+                <div class="box_icon" id="box_logo">
+                </div>
+                <div class="box-info">
+                    <div class="info_plan" id="plan_the_most">
+                        ADVANCED PLAN
+                    </div>
+                    <div class="info_price" id="price_light">
+                        <p class="price_height">
+                            211<span class="price_upper">00</span>
+                        </p>
+                        <p class="price_time">
+                            PLN/MSC
+                        </p>
+                    </div>
+                    <div class="box_margin">
+                        <div class="info_paint">
+                            Zakup towaru + dowóz
+                        </div>
+                        <div class="info_express">
+                            Serwis
+                        </div>
+                        <div class="info_paint">
+                            Gwarancja 6 lat
+                        </div>
+                        <div class="info_express">
+                            Porady projektanta
+                        </div>
+                    </div>
+                    <div class="box_join">
+                        DOŁĄCZ
+                    </div>
+            </article>
+            </div>
+    </chest>
 
 
 
