glowna strona pracy warsztatowej

--- a/index.html
+++ b/index.html
@@ -182,6 +182,58 @@
             </article>
             </div>
     </chest>
+    <footer>
+        <article class="footer_header">
+            KONTAKT
+        </article>
+        <article class="footer_box">
+            <div class="box_size" id="box_name">
+                Imię
+            </div>
+            <div class="box_size" id="box_email">
+                email
+            </div>
+            <div class="box_size" id="box_message">
+                Wiadomość
+            </div>
+        </article>
+        <article class="footer_allow">
+            <img id="box_sit" src=" images/red_chair.png " />
+            <div class="box_allow">
+
+                <img id="allow_icon" src="images/form_ok.jpg" />
+                <div>
+
+
+                    <p class="allow_text">
+                        Zgadzam się na przetwarzanie
+                    </p>
+                    <p class="allow_text">
+                        danych osobowych
+                    </p>
+
+                </div>
+
+                <div class="box_send">
+                    WYŚLIJ
+                </div>
+            </div>
+        </article>
+        <article class="footer_infos ">
+            <p class="footer_rights">
+                Copyright 2014 | All Rights Reserved - Sit On Chair
+            </p>
+            <p class="footer_main_logo">
+                SIT <span class="logo_bold">ON</span> CHAIR
+            </p>
+            <div class="footer_logos">
+                <img src="images/twitter.png" />
+                <img src="images/pinterest.png" />
+                <img src="images/vimeo.png" />
+                <img src="images/flickr.png" />
+            </div>
+        </article>
+    </footer>
 
 
 
