praca warsztatowa na dzien dzisiejszy

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <article id="slide_box">
             <img class="section_icon" src="images/black_chair.png" />
             <h1>
-                SIT <span>ON</span> OUR <span>CHAIR</span>
+                SIT <span class="color">ON</span> OUR <span class="color">CHAIR</span>
             </h1>
             <div class="info_box">
                 <p>
