praca warsztatowa poprawione podstrony

--- a/index3.html
+++ b/index3.html
@@ -8,6 +8,37 @@
 </head>
 
 <body>
+    <header>
+        <p class="header_title">
+            SIT <span class="color">ON</span> CHAIR
+        </p>
+        <nav class="header_horizontal_list">
+            <ul>
+                <li>
+                    KONTAKT
+                </li>
+                <li>
+                    GALERIA
+                </li>
+                <li class="piece_of_list">
+                    O FIRMIE
+                    <div class="vertical_box">
+                        <ul>
+                            <li>
+                                Aktualności
+                            </li>
+                            <li>
+                                Nasz team
+                            </li>
+                            <li>
+                                Historia
+                            </li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <cardboard>
         <article class="cardboard_header">
             KONTAKT
@@ -47,6 +78,22 @@
             </p>
         </article>
     </cardboard>
+    <footer>
+        <article class="footer_infos ">
+            <p class="footer_rights">
+                Copyright 2014 | All Rights Reserved - Sit On Chair
+            </p>
+            <p class="footer_main_logo">
+                SIT <span class="logo_bold">ON</span> CHAIR
+            </p>
+            <div class="footer_logos">
+                <img src="images/twitter.png" />
+                <img src="images/pinterest.png" />
+                <img src="images/vimeo.png" />
+                <img src="images/flickr.png" />
+            </div>
+        </article>
+    </footer>
 </body>
 
 </html>
