--- a/index2.html
+++ b/index2.html
@@ -106,6 +106,7 @@
             </div>
         </article>
     </footer>
+    <script src="js/events.js" type="text/javascript"></script>
 </body>
 
 </html>
