--- a/index.html
+++ b/index.html
@@ -197,30 +197,30 @@
                         <span class="list_label">Wybierz rodzaj</span>
                         <span class="list_arrow"></span>
                         <ul class="list_panel choice_name">
-                            <li>Clair</li>
-                            <li>Margarita</li>
-                            <li>Selena</li>
+                            <li data-price="150">Clair</li>
+                            <li data-price="200">Margarita</li>
+                            <li data-price="230">Selena</li>
                         </ul>
                     </div>
                     <div class="drop_down_list">
                         <span class="list_label">Wybierz kolor</span>
                         <span class="list_arrow"></span>
                         <ul class="list_panel choice_color">
-                            <li>Czerwony</li>
-                            <li>Czarny</li>
-                            <li>Pomarańczowy</li>
+                            <li data-price="10">Czerwony</li>
+                            <li data-price="30">Czarny</li>
+                            <li data-price="20">Pomarańczowy</li>
                         </ul>
                     </div>
                     <div class="drop_down_list">
                         <span class="list_label">Wybierz materiał</span>
                         <span class="list_arrow"></span>
                         <ul class="list_panel choice_material">
-                            <li>Tkanina</li>
-                            <li>Skóra</li>
+                            <li data-price="0">Tkanina</li>
+                            <li data-price="50">Skóra</li>
                         </ul>
                     </div>
                     <div class="checkbox check-box">
-                        <input type="checkbox" id="transport" data-transport-price="200">
+                        <input type="checkbox" id="transport" data-price="80">
                         <label for="transport">Transport</label>
                     </div>
                     <!--<div class="checkbox"></div>-->
