--- a/index.html
+++ b/index.html
@@ -197,26 +197,26 @@
                         <span class="list_label">Wybierz rodzaj</span>
                         <span class="list_arrow"></span>
                         <ul class="list_panel choice_name">
-                            <li data-price="150">Clair</li>
-                            <li data-price="200">Margarita</li>
-                            <li data-price="230">Selena</li>
+                            <li class="chair" data-price="150">Clair</li>
+                            <li class="chair" data-price="200">Margarita</li>
+                            <li class="chair" data-price="230">Selena</li>
                         </ul>
                     </div>
                     <div class="drop_down_list">
                         <span class="list_label">Wybierz kolor</span>
                         <span class="list_arrow"></span>
                         <ul class="list_panel choice_color">
-                            <li data-price="10">Czerwony</li>
-                            <li data-price="30">Czarny</li>
-                            <li data-price="20">Pomarańczowy</li>
+                            <li class="select_color" data-price="10">Czerwony</li>
+                            <li class="select_color" data-price="30">Czarny</li>
+                            <li class="select_color" data-price="20">Pomarańczowy</li>
                         </ul>
                     </div>
                     <div class="drop_down_list">
                         <span class="list_label">Wybierz materiał</span>
                         <span class="list_arrow"></span>
                         <ul class="list_panel choice_material">
-                            <li data-price="0">Tkanina</li>
-                            <li data-price="50">Skóra</li>
+                            <li class="select_pattern" data-price="0">Tkanina</li>
+                            <li class="select_pattern" data-price="50">Skóra</li>
                         </ul>
                     </div>
                     <div class="checkbox check-box">
