--- a/index.html
+++ b/index.html
@@ -41,26 +41,48 @@
         </nav>
     </header>
     <section class="box">
-        <article class="slide_box">
-            <img class="icon_box" src="images/black_chair.png" />
-            <h2>
-                SIT <span class="color">ON</span> OUR <span class="color">CHAIR</span>
-            </h2>
-            <div class="info_box">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque viverra vel nisi id elementum. Sed vehicula augue ipsum, convallis semper enim suscipit vel. Fusce hendrerit nibh sed libero malesuada, ut ultrices quam ultricies.
-                </p>
-            </div>
-            <p class="more_box">
-                ZOBACZ WIĘCEJ
-            </p>
-            <div class="left_slyder_button">
-                &lt;
-            </div>
-            <div class="right_slyder_button">
-                &gt;
-            </div>
-        </article>
+        <ul class="bxslider">
+            <li class="slider">
+                <article class="slide_box">
+                    <img class="icon_box" src="images/black_chair.png" />
+                    <h2>
+                            SIT <span class="color">ON</span> OUR <span class="color">CHAIR</span>
+                        </h2>
+                    <div class="info_box">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque viverra vel nisi id elementum. Sed vehicula augue ipsum, convallis semper enim suscipit vel. Fusce hendrerit nibh sed libero malesuada, ut ultrices quam ultricies.
+                        </p>
+                    </div>
+                    <p class="more_box">
+                        ZOBACZ WIĘCEJ
+                    </p>
+                </article>
+            </li>
+            <li>
+                <img class="slider" src="images/pobrane.jpg" />
+            </li>
+            <li>
+                <img class="slider" src="images/pobrane 2.jpg" />
+            </li>
+            <li>
+                <img class="slider" src="images/pobrane 3.jpg" />
+            </li>
+            <li>
+                <img class="slider" src="images/pobrane 4.jpg" />
+            </li>
+            <li>
+                <img class="slider" src="images/pobrane 5.jpg" />
+            </li>
+            <li>
+                <img class="slider" src="images/pobrane 6.jpg" />
+            </li>
+        </ul>
+        <div class="left_slyder_button">
+            &lt;
+        </div>
+        <div class="right_slyder_button">
+            &gt;
+        </div>
     </section>
     <section class="container">
         <img class="photo_begin_container" src="images/box1_img.jpg">
