praca warsztatowa w 4 tygodniu kursu

--- a/index.html
+++ b/index.html
@@ -16,23 +16,25 @@
         <nav class="header_horizontal_list">
             <ul>
                 <li>
-                    KONTAKT
+                    <a href="" class="a_href">KONTAKT</a>
                 </li>
                 <li>
-                    GALERIA
+                    <a href="" class="a_href">GALERIA</a>
                 </li>
                 <li class="piece_of_list">
-                    O FIRMIE
-                    <div class="vertical_list">
+                    <a href="" class="a_href">O FIRMIE</a>
+                    <div class="vertical_list hidden_list">
+                        <div id="list_triangle">
+                        </div>
                         <ul>
                             <li>
-                                Aktualności
+                                <a href="" class="a_href">Aktualności</a>
                             </li>
                             <li>
-                                Nasz team
+                                <a href="" class="a_href">Nasz team</a>
                             </li>
                             <li>
-                                Historia
+                                <a href="" class="a_href">Historia</a>
                             </li>
                         </ul>
                     </div>
@@ -45,17 +47,19 @@
             <li class="slider">
                 <article class="slide_box">
                     <img class="icon_box" src="images/black_chair.png" />
-                    <h2>
+                    <div class="text_box">
+                        <h2>
                             SIT <span class="color">ON</span> OUR <span class="color">CHAIR</span>
                         </h2>
-                    <div class="info_box">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque viverra vel nisi id elementum. Sed vehicula augue ipsum, convallis semper enim suscipit vel. Fusce hendrerit nibh sed libero malesuada, ut ultrices quam ultricies.
+                        <div class="info_box">
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque viverra vel nisi id elementum. Sed vehicula augue ipsum, convallis semper enim suscipit vel. Fusce hendrerit nibh sed libero malesuada, ut ultrices quam ultricies.
+                            </p>
+                        </div>
+                        <p class="more_box">
+                            <a href="" class="a_href">ZOBACZ WIĘCEJ</a>
                         </p>
                     </div>
-                    <p class="more_box">
-                        ZOBACZ WIĘCEJ
-                    </p>
                 </article>
             </li>
             <li>
@@ -137,7 +141,7 @@
                         </div>
                     </div>
                     <div class="join_bin">
-                        DOŁĄCZ
+                        <a href="" class="a_href">DOŁĄCZ</a>
                     </div>
                 </div>
             </article>
@@ -167,7 +171,7 @@
                         </div>
                     </div>
                     <div class="observe_bin">
-                        DOŁĄCZ
+                        <a href="" class="a_other_color">DOŁĄCZ</a>
                     </div>
                 </div>
             </article>
@@ -201,7 +205,7 @@
                         </div>
                     </div>
                     <div class="join_bin">
-                        DOŁĄCZ
+                        <a href="" class="a_href">DOŁĄCZ</a>
                     </div>
                 </div>
             </article>
@@ -286,29 +290,31 @@
         </article>
         <article class="footer_data">
             <div class="data_size data_name">
-                Imię
+                <input id="position_name" type="text" name="name" value="Imię">
             </div>
             <div class="data_size data_email">
-                email
+                <input id="position_email" type="text" name="email" value="email">
             </div>
             <div class="data_size data_message">
-                Wiadomość
+                <input id="position_message" type="text" name="message" value="Wiadomość">
             </div>
         </article>
         <article class="footer_confirm">
             <img class="confirm_sit" src=" images/red_chair.png " />
             <div class="confirm_allow">
-                <img class="allow_icon" src="images/form_ok.jpg" />
                 <div>
-                    <p class="allow_text">
-                        Zgadzam się na przetwarzanie
-                    </p>
-                    <p class="allow_text">
-                        danych osobowych
-                    </p>
+                    <img class="allow_icon" src="images/form_ok.jpg" />
+                    <div>
+                        <p class="allow_text">
+                            Zgadzam się na przetwarzanie
+                        </p>
+                        <p class="allow_text">
+                            danych osobowych
+                        </p>
+                    </div>
                 </div>
                 <div class="confirm_send">
-                    WYŚLIJ
+                    <a href="" class="a_href">WYŚLIJ</a>
                 </div>
             </div>
         </article>
